--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -206,6 +206,7 @@
  SQI_zi_ji_zhi_zu:0 "自给自足"
  SQI_chantiers_de_la_jeunesse:0 "人力资源"
  SQI_chantiers_de_la_jeunesse3:0 "稳步工业化"
+ SQI_expanded_beijing_investment:0 "德国投资增加"
  SQI_german_garrison:0 "向德意志学习"
  SQI_german_garrison4:0 "钢铁之军"
  SQI_invest_arms_industry:0 "现代化骑兵"
@@ -227,12 +228,6 @@
  SQI_controlled_drug_trade_desc:0 "山东的经济糟糕透顶，但是山东的鸦片生意却又是成天到晚火爆得不行，凭借着德国人的港口还能向外输送。但是这样经济来源此前完全不受靳督理的掌控，直到现在他终于能够完全掌握这笔钱了。"
  SQI_violently_supressed_drug_trade:0 "严厉打击毒品贸易"
  SQI_violently_supressed_drug_trade_desc:0 "天师已经下令道德和慈善组织以暴力手段根除那些瘾君子，并对他们进行审判。在大刀会的帮助下，毒品交易被禁，鸦片田被毁，腐败官僚被彻底铲除。"
- SQI_Japanese_military_assistance:0 "日式训练"
- SQI_Japanese_military_assistance_desc:0 "受伊达顺之助之邀前来的日本军官团已经在我军进行了一定的改进，一些部队现在必须学会日式命令，而黑龙会的小册子现在通常被用来激励士兵。"
- SQI_German_military_assistance:0 "德式训练"
- SQI_German_military_assistance_desc:0 "德属东亚顾问的训练在我军中反响良好，除了标准的普鲁士式军事训练之外，东亚监事会的顾问们还提供了有关武器装备的信息与相关课程，以便于在获胜之后能加深军事合作。"
- SQI_Legation_military_assistance:0 "来自使馆城的教官"
- SQI_Legation_military_assistance_desc:0 "使领馆聘请的美国、英国和法国顾问们都顺利地完成了任务。现在，军官们已经掌握了新的外语和脏话，并且得了几种新的性病。不过总的来说是利大于弊。"
  SQI_red_spears:0 "红枪相助"
  SQI_red_spears_desc:0 "鲁中的红枪会最终皈依了一贯道，并决定为我们而战。他们的领袖坚定的将驱逐外夷视作自己的精神本源。"
  SQI_big_swords:0 "大刀相助"
@@ -307,8 +302,6 @@
  SQI_decisions_unlocked:0 "解锁新决议"
  SQI_create_LSP:0 "创建华东诸省联合"
  SQI_create_LSP_desc:0 "六省现在将在靳大帅的麾下重组，孙传芳死了之后，靳云鹗统一并且在其麾下建立了六省联合。他现在重新组建了同盟，并以机会主义和军事统治来治理六省。"
- SQI_economic_decisions:0 "山东的经济增长"
- SQI_economic_decisions_desc:0 "长期以来，由于治理不力和政治动荡，山东经济一直落后于中国沿海的大城市。而现在，政治动荡的幻象已然不再，我们终于能令这篇广袤而历史悠久的土壤上焕发出无限生机。"
  SQI_war_intervention_decisions:0 "干预军阀们的地盘"
  SQI_war_intervention_decisions_desc:0 "如果要实现我们的最终目标，我们就必须利用好任何不设防的边界的机会，因此，我们要打爆那些阻碍中国人民与我们之间联系的蠢货傻蛋们，很快，我们就将看到南京的城墙，美丽的海港，并且品尝到四川的美味珍馐。"
  SQI_intervene_LEP:0 "干预八省联合内战"
@@ -371,8 +364,6 @@
  SQI_Zhejiang:0 "§Y如果我们拿下了浙江，我们便会发展这里§!\n"
  SQI_can_obtain_dock:0 "§Y如果是靳云鹗上台的话，便可以与日本人协商来获得造船厂§!\n"
  SQI_can_obtain_air:0 "§Y现在可就编练空军一事与盟友会晤§!\n"
- SQI_can_obtain_inf:0 "§Y如果张天然或者屈映光上台，便可与大清就武器装备等诸多问题展开会谈。§!\n"
- SQI_can_obtain_fact:0 "§Y如果张天然或者屈映光上台，便可与大清就工业和建设援助问题展开会谈§!\n"
  sqi_pat_aut_liu_heding_puppet:0 "新皖系军阀"
 
  SQI_ying_xiang:0 "在山东的博弈"
@@ -462,30 +453,6 @@
  SQI_Assassinating_Bureaucrats_Threatening_The_Opium_Trade_desc:0 "山东的经济糟糕透顶，但是山东的鸦片生意却又是成天到晚火爆得不行，凭借着德国人的港口还能向外输送。但是这样经济来源此前完全不受靳督理的掌控，直到现在他终于能够完全掌握这笔钱了。"
  SQI_Advertising_Shandong_As_A_Model_Province_In_Beijing:0 "山东是个模范省"
  SQI_Advertising_Shandong_As_A_Model_Province_In_Beijing_desc:0 "模范省的概念不是山东能独立的原因，但是很快它就会成为山东自治的重要论据之一。山东的公务员们将制造山东的正面消息，并确保外国人老老实实的呆在城里。"
- SQI_Bolstering_The_Army:0 "重建东北军"
- SQI_Bolstering_The_Army_desc:0 "东北军自从撤离山东后，其中很大一部分单位就地解散。尽管我们已尽力，但是外国观察家们似乎是对的。奉军的许多老兵开了小差，我们需要找预备队来参战。所有能扛枪的都应该在山东的老军旗下奋战到底。"
- SQI_A_Modern_Army:0 "职业军队"
- SQI_A_Modern_Army_desc:0 "过去士兵开小差等斑斑劣迹证明，我们需要聚焦于训练一支职业化军队。这要求我们必须要优中选优，为士兵提供训练，给他们适当的命令，这会使得军队的战斗力进一步提升。"
- SQI_Research_Replacements_For_Old_Weapons:0 "替换老旧装备"
- SQI_Research_Replacements_For_Old_Weapons_desc:0 "现在我军的雇佣化显示了他们武器的落后。如果我们要向专业化方向改革，我们的工程师必须有时间试验和采购新的武器。"
- SQI_Train_Cavalry_With_Japanese_Fighting_Methods:0 "北方骑兵训练"
- SQI_Train_Cavalry_With_Japanese_Fighting_Methods_desc:0 "与靳云鹗同来山东的雇佣骑兵，不是在战斗就是在战斗的路上。他们中有一些人有在北方战斗的经验，而且他们比一般巡逻队跑得快，如果能把他们这个经验应用到战斗中，那真的是妙极了。"
- SQI_Improving_The_Railroad-Army_Coordination:0 "改善铁路补给线"
- SQI_Improving_The_Railroad-Army_Coordination_desc:0 "山东的铁路对于靳云鹗来说是必不可少的，现在他的经验将用于改进山东的铁路系统，从而更好地为其服务，一些有轨电车可以用来运食物，另一些则可以用来运零件，这样可以大大的减少故障率。"
- SQI_A_Fanatical_But_ill-equipped_Army:0 "狂热之军"
- SQI_A_Fanatical_But_ill-equipped_Army_desc:0 "根据过去新兵相对于其上级所表现出的敢死勇气所表明，我们应该训练那些狂热的战士们，我们要从年轻士兵之中严挑细选，对其进行训练，并使其永不退缩，这样才能使我们迅速的获得胜利。"
- SQI_Purchase_Imperial_Weapons_From_The_Qing:0 "信徒武器上缴"
- SQI_Purchase_Imperial_Weapons_From_The_Qing_desc:0 "山东人民为抵御军匪们的袭扰而囤积了一大批武器装备，现在他没了，我们就能让这些潜在的爱国者为救国而上缴武器了。"
- SQI_Recruit_Chahar_Cavalry:0 "学习察哈尔骑兵"
- SQI_Recruit_Chahar_Cavalry_desc:0 "察哈尔骑手在抵抗靳云鹗税吏的斗争中举足轻重，现在是报答的时候了，在鲁的察哈尔骑手将可能被赦免一切的土匪罪行，并被雇来组建和训练部队协助救国。"
- SQI_Train_Soldiers_On_Last_Ditch_Resistance:0 "为天师而战"
- SQI_Train_Soldiers_On_Last_Ditch_Resistance_desc:0 "士兵将不再听从于军阀之命，在这个时代需要有一个有经验有能力的领导者，即天师，来激发他们的勇气。一个文武兼备的指挥中枢将能有效的利用山东的人力物力实现目的。"
- SQI_Sending_Military_Staff_For_Training:0 "军官返校"
- SQI_Sending_Military_Staff_For_Training_desc:0 "由于我们的政府缺乏合法性，新一代的官兵得不到机会进入军校深造，我们必须要考虑对外国军事教育方法和内容的吸收，并向这项工作投入资源。"
- SQI_Recruitung_Military_Experts_Outside_Shandong:0 "发展秘密武器"
- SQI_Recruitung_Military_Experts_Outside_Shandong_desc:0 "在过去的几十年里，山东之所以能够保持自治，靠的就是打破常规，因此我们手里有一系列探索性的军事项目可供发展。"
- SQI_Improving_Our_Technological_Sharing:0 "科研返校"
- SQI_Improving_Our_Technological_Sharing_desc:0 "由于我们的政府缺乏合法性，新一代的官兵得不到机会进入军校深造，我们的行政部门可以招一批青岛和天津的教师，并制定一套军事研究计划。"
 
  SQI_make_shandong_great:0 "挽救山东经济"
  SQI_make_shandong_great_desc:0 "欧战期间，列强忙于互相开战没有余力维持对华经济入侵。在这段时间里民族工业有了飞速发展，在山东最庞大的民族企业自然是苗氏工商业他们依靠垄断广州、上海对华北地区的贸易权发家，从创立成丰面粉厂开始逐渐走上了兴办实业的道路，并在欧战期间不断扩大产业，新办成通纱厂、成大纱厂等等。然而欧战的结束列强入侵恢复，《北京条约》的签订，再加上企业自身经营问题，山东的经济就像苗氏工商业一样开始走上下坡路。"
@@ -557,44 +524,26 @@
  SQI_de_shi_jun_dui:0 "德式军队"
  SQI_de_shi_jun_dui_desc:0 "德意志是这个世界上最强大的国家，有着最强大的军队，既然我们想要崛起，那么我们就应该循着德意志的步伐去建立一支全新的军队！"
  SQI_xin_sho_qi_bing:0 "现代化骑兵部队"
- SQI_xin_sho_qi_bing_desc:0 "机动部队对于战争而言是必不可少的，但是旧式的骑兵已经不能再适应当下这个"
+ SQI_xin_sho_qi_bing_desc:0 "机动部队对于战争而言是必不可少的，但是旧式的骑兵已经不能再适应当下这个组建机械化的时代了，我们的机动部队也得用上更先进的装备，摩托化、卡车化这才是新时代的骑兵。"
  SQI_kuo_zhang_bai_e_jun:0 "扩大白俄营"
- SQI_kuo_zhang_bai_e_jun_desc:0 " "
+ SQI_kuo_zhang_bai_e_jun_desc:0 "张宗昌旗下最强大的部队莫过于那支白俄雇佣军，在靳云鹗推翻张宗昌的同时，也用一比更丰厚的合同换来了鲍里斯·阿年科夫的效忠。如今他们也仍然是我们军队的重要战力，我们何不通过他们招募更多白俄士兵，来扩充我们的战斗力。"
  SQI_ying_xiang_zhu_yi_jiao_yu:0 "爱国主义教育"
- SQI_ying_xiang_zhu_yi_jiao_yu_desc:0 " "
+ SQI_ying_xiang_zhu_yi_jiao_yu_desc:0 "军队应该以爱国主义教育为基础，不要去斤斤计较一分一毫的利益，要为了国家大局考虑，要为了全体考虑，要让他们知道他们是山东人的同时更是中国人。"
  SQI_kan_ke_jun_xun:0 "严苛训练"
- SQI_kan_ke_jun_xun_desc:0 " "
+ SQI_kan_ke_jun_xun_desc:0 "德意志的军队之所以强盛，便是因为他们有着最严苛的军事训练，平时多流汗，战时少流血。我们的每一名士兵，无论新旧都需要接受最严苛的训练，只有这样我们的军队才能战无不胜。"
  SQI_feng_xin_jun_guo_zhu_yi:0 "奉行军国主义"
- SQI_feng_xin_jun_guo_zhu_yi_desc:0 " "
+ SQI_feng_xin_jun_guo_zhu_yi_desc:0 "那些把军事认为是“必要之恶”的人在面对战争时必然犹豫不决。我们将把军国主义植入我们的文化，即使不称不上全民皆兵，也必然化身为军人的民族。如果说鸦片战争以来有什么事情可以确定的，那就是我们需要一场结束一切战争的战争，来洗刷中华民族的耻辱。"
  SQI_jun_guan_fan_xiao:0 "军官返校"
  SQI_jun_guan_fan_xiao_desc:0 "由于我们的政府缺乏合法性，新一代的官兵得不到机会进入军校深造，我们必须要考虑对外国军事教育方法和内容的吸收，并向这项工作投入资源。"
  SQI_xue_xin_xing_li_lun:0 "学习新理论"
- SQI_xue_xin_xing_li_lun_desc:0 " "
+ SQI_xue_xin_xing_li_lun_desc:0 "我们的军事思想已经落后于时代了，我们需要学习更先进的思想，我们将派遣访问团前往德国、日本学习他们的陆军军事。"
+ SQI_Improving_The_Railroad_Army_Coordination:0 "改善铁路补给线"
+ SQI_Improving_The_Railroad_Army_Coordination_desc:0 "山东的铁路对于靳云鹗来说是必不可少的，现在他的经验将用于改进山东的铁路系统，从而更好地为其服务，一些有轨电车可以用来运食物，另一些则可以用来运零件，这样可以大大的减少故障率。"
  SQI_gang_tie_zhi_jun:0 "钢铁之军"
- SQI_gang_tie_zhi_jun_desc:0 " "
+ SQI_gang_tie_zhi_jun_desc:0 "以钢铁铸就我们的最尖锐的武器，刺穿任何胆敢阻拦在我们面前的敌人。"
  SQI_xue_rou_chang_Cheng:0 "血肉长城"
- SQI_xue_rou_chang_Cheng_desc:0 " "
+ SQI_xue_rou_chang_Cheng_desc:0 "我们的血肉是我们最好的武器，我们的身后便是无依无靠的人民，将士们，不要害怕战死，死亡不过是救赎的开始，你们的灵魂将被洗涤，你们的罪恶将被荡去，你们将前往极乐之地。"
 
- SQI_Turning_Our_Attention_To_Industry:0 "半岛工业振兴"
- SQI_Turning_Our_Attention_To_Industry_desc:0 "虽然山东免于八省联合治理，但是这些年还是有一批厂子破产了。行政部门一直致力于勘探这些空地皮，并且试图引进外资来发展经济。"
- SQI_Reopening_The_Barred_Factories:0 "重开工厂"
- SQI_Reopening_The_Barred_Factories_desc:0 "靳云鹗试图用山东矿业集团对抗鲁大矿业公司，但是由于集团和经销商的不和而失败，一大批厂子也随之倒闭。是时候让他们和解，然后重新开门营业了。"
- SQI_Improving_The_Qingdao_Weihaiwei_Railway:0 "恢复胶济铁路"
- SQI_Improving_The_Qingdao_Weihaiwei_Railway_desc:0 "胶济铁路自从1910年代建成以来，便由于过度使用和低劣的建筑方法而破旧不堪。为此我们可以与德国人达成协议，由德国人提供技术，我们提供民工。"
- SQI_Leasing_Shandong_Resources_To_Either_Qingdao_or_Weihaiwei:0 "租借矿业权"
- SQI_Leasing_Shandong_Resources_To_Either_Qingdao_or_Weihaiwei_desc:0 "山东自开矿以来，便有无数人在这儿发现了新矿藏。我们的行政部门现在有了足够的能力向中国公司租借矿业权，不出意外的话，我们也能从中发一笔财。"
- SQI_Getting_Japanese_Military_Advisors_To_Construct_New_Factories:0 "赋权山东矿业集团"
- SQI_Getting_Japanese_Military_Advisors_To_Construct_New_Factories_desc:0 "山东矿业集团是张宗昌与1928年秘密建立而被靳云鹗篡取的，其目的是与在山东的外国矿业公司相抗衡。如果我们能通过向集团提供秘密援助的方式得以实现的话，那对山东人民是大大的有利。"
- SQI_Restablish_Jinana_University:0 "重开山东大学"
- SQI_Restablish_Jinana_University_desc:0 "山东大学在世界大战临近结束之时被关闭了，其主体一直留在德属青岛。在这片教育荒地之中，只有泰安的山东农业大学没搞军事教育。为改变这一状况，山东政府与青岛当局达成协议，只要山大得以重开，那么山东的学生就会重新入学。"
- SQI_Improving_Domestic_Roads_That_Connect_To_The_Qing:0 "大路通北京"
- SQI_Improving_Domestic_Roads_That_Connect_To_The_Qing_desc:0 "现在渤海海路由于清奉之争而危机四伏，因此通往北京的道路是极为重要的。尤其是天津这样吸引了大量贸易的自由贸易区。在我们政府的监管之下，通往北京的道路正得以修筑。"
- SQI_Attracting_Qing_Nobility:0 "接纳大清遗老"
- SQI_Attracting_Qing_Nobility_desc:0 "北京当局为了一些鸡毛蒜皮的政治问题驱逐了一批居民，而这正是我们的机会。当局已经授权修缮山东周边的几处地产，来邀请这些大清遗老入鲁。这将为我们的自治地位提供依据，最次也能成为不错的人质。"
- SQI_Leveraging_Tianjin_Allies_For_Free_Factories:0 "赎买天津工厂"
- SQI_Leveraging_Tianjin_Allies_For_Free_Factories_desc:0 "近来全球的经济动荡使得天津房价大跌，这是我们赎买天津军民工厂的绝好机会，而天津也能成为我们了解中国状况的中立港。"
- SQI_Investigate_Leakage_Of_Output_Into_Bandits_Middlemen_Selling:0 "彻查进出口漏洞"
- SQI_Investigate_Leakage_Of_Output_Into_Bandits_Middlemen_Selling_desc:0 "近来有消息说，青岛到济南的货物出现了缺损的情况，这并非订单或者运输过程的损失，肯定是有人在青岛到济南这段路上捣鬼，我们必须彻查此事。"
  SQI_Reclaim_The_Industry_Of_The_Annexed_Warlords:0 "收复被占产业"
  SQI_Reclaim_The_Industry_Of_The_Annexed_Warlords_desc:0 "在直系多年以来的漠视之后，[SQI.GetLeader]带来了复兴南方各省的新希望。这个承诺将给遵从的督军和督办们带来丰厚的回报。"
  SQI_Victory_In_The_South:0 "南方的胜利"
@@ -613,18 +562,6 @@
  SQI_Improve_Fujian_desc:0 "在过去一个世纪里，福建与山东情形相近。这里是无数难民的故乡，也有众多排外的家族，我们的行政部门正试图联络福建省内的大家族，从而获得他们的支持与对我们的忠诚。"
  SQI_Improve_Zhejiang:0 "重建浙北"
  SQI_Improve_Zhejiang_desc:0 "浙北在太平天国运动中饱受兵祸，也无人牵头重建此区域。我们控制此地之后，只要我们能拨一笔钱来修整这里的基建和慰问，那么我们就能赢得人心，让这里的人民为我们而战。"
- SQI_Declare_Official_Offshoot_Of_The_Beiyang_Navy:0 "重建山东北洋水师"
- SQI_Declare_Official_Offshoot_Of_The_Beiyang_Navy_desc:0 "山东曾是大清之瑰宝北洋水师的母港，尽管德国人只给我们留下了一些小港口，但我们定会复兴，曾是渤海之王的北洋水师在山东的帮助下定会回归。"
- SQI_Purchasing_Ships_For_The_Navy:0 "采购日本军舰设计"
- SQI_Purchasing_Ships_For_The_Navy_desc:0 "我们已经在日本海军内部找到了愿意给我们设计舰船的人，尽管间谍活动非我等强项，但最起码我们能担负得起设计费用。"
- SQI_Acquire_A_Naval_Base:0 "取得海军基地"
- SQI_Acquire_A_Naval_Base_desc:0 "如果我们的战士们失去与山东的联系，那么仅仅靠烟台海军基地不大可能会满足战士们的需求，因此，一个大型海军基地是我们所必需的。"
- SQI_Purchasing_Convoys_For_The_Navy:0 "采购运输船"
- SQI_Purchasing_Convoys_For_The_Navy_desc:0 "如果我们要想在纷争不断的渤海和潜艇之下扩展自身的贸易网络，按我们就必须有更多的商船，而对我们来说，买二手旧商船是最为稳妥的。"
- SQI_Purchasing_Submarines_For_The_Navy:0 "采购潜艇"
- SQI_Purchasing_Submarines_For_The_Navy_desc:0 "如果我们要击败渤海的敌手，那我们就得智取对手。解决方案就是潜艇计划，如果我们能采购新的潜艇，那我们就能实现智取对手的计划。"
- SQI_Incorporating_Qingdao_And_Weihaiwei_Ports:0 "兼并威胶二港"
- SQI_Incorporating_Qingdao_And_Weihaiwei_Ports_desc:0 "是时候重新收回北洋舰队的真正母港：青岛了，我们的回归将为中国海军工业的复兴指明方向。"
  SQI_Expanding_The_Airforce:0 "建立山东航空队"
  SQI_Expanding_The_Airforce_desc:0 "现在海上已经成为战场，而我们也需要换个角度去思考了，我们无法在济南机场投入使用之前建立有效的空中力量，因此我们需要改变之一状态。"
  SQI_Construct_Modern_Fighters:0 "实验性战斗机"
@@ -661,6 +598,26 @@
  SQI.5.t:0 "崂山汽水厂"
  SQI.5.d:0 "青岛生产汽水的历史相当悠久。德占之初，1897年即有德商马彦汽水厂在兰山路开业，因为优良的水质和口感，很快在香港、日本、德国及国内市场打开了销路，崂山矿泉水也随之美名远扬。欧战前后，青岛的汽水厂就发展到了六七家，不过仅有大连制冰汽水厂和崂山汽水公司产量较高，质量较好，设备也比较先进。此外另有几家中国小厂，规模不大，设备也比较简陋，基本都是手工操作。由于竞争能力不强，都先后倒闭或转业了。崂山汽水公司因自然条件和设备较好，再加上有一段时间因有德商美最时洋行投资，资金比较充裕。唯有该公司的虎头牌汽水。可与日商大连制冰汽水厂的狮头牌汽水相抗衡。也是少数在这些年里，没有被德国人和日本人给搞跨吞并掉的中国大厂。尤其是前两年，崂山汽水公司凭借崂山矿泉水的卓越品质，在厂区内勘探挖掘了第二口水井，推出了我国第一瓶果味含气汽水，引起轰动。"
  SQI.5.a:0 "这可是优质企业"
+ SQI.6.t:0 "来来往往"
+ SQI.6.d:0 "即便南方的战火为山东带来了数不胜数的难民，但与此同时破产的山东农民也在无可奈何中逃离山东。在清末开始山东人均耕地面积就在3亩左右徘徊。绝大多数的农民存在着严重的生存危机。对于拥有少量土地的农民来说可以通过佃入土地维持生活。但是，一旦遇到天灾人祸，无地少地的农民便无力抵抗，他们不得不出卖自己的土地，为了生存或只身前往或全家行动。他们不得不铤而走险，离村便是一大趋势，至于什么“安土重迁”都抛在了一边，因为只有离开才能有希望活着。而逃离一旦开始，就不再是一个农民的行为，往往是家庭或者整个家族的集体迁移。闯关东、下南洋、走西口...\n\n这对于我们而来当然是一个灾难，逃亡而来的难民早已变得虚弱不已，逃荒出去的农民却是我们的精壮劳动力，大规模的人口迁移导致了耕地的迁出地土地的大规模荒芜，也导致各种各样的宗教思想，尤其是那帮子一贯道徒的影响力与日俱增，我们最好赶快把难民们全部赶到耕地里去，否则更恐怖的粮食危机还在后面等着我们。而那帮子邪教徒必须尽快掐死在胎里。"
+ SQI.6.a:0 "山东的事情为什么这么糟糕？"
+
+ shandong.20.t:0 "一贯道寻求军事现代化"
+ shandong.20.d:0 "消息传到了红枪会和大刀会等这些支持张天然的农民军耳中，他们开始向我们的地方官收购武器装备，不过他们所给的价钱属实惨不忍睹。然而地方官们却一起为他们背书，说支持他们就能削弱我们共同的敌人，我们可以私底下再给[SQI.GetNameDef]送一批武器，或者狠狠的揍他们的屁股。"
+ shandong.20.a:0 "敌人的敌人就是我们朋友"
+ shandong.20.b:0 "爷不支持这帮疯子"
+ shandong.23.t:0 "部队完成察哈尔骑兵训练"
+ shandong.23.d:0 "在山东的察哈尔骑手们已经练出了一支新的骑兵队，张天然对这支军队展现出的虔信很是满意，他在演讲时用了《水浒传》的大段文字，号召他们能跟圆寂前的鲁智深一样大彻大悟。"
+ shandong.23.a:0 "见信而寂"
+ shandong.988.t:0 "实验型坦克建设"
+ shandong.988.d:0 "我军的几个军官曾经见识过德国装甲部队的作战，尽管这看似不可能，但是我们最终打造出了中国自主知识产权的坦克车！虽然其中有些组件是被摧毁的八省联合的遗产，但是大多数还是中国制造。现在我们已经学会怎么制造装甲载具了，我们就能给敌人送个大宝贝过去。"
+ shandong.988.a:0 "这东西还能跑得起来"
+ shandong.989.t:0 "欧式银轮部队训练"
+ shandong.989.d:0 "显而易见，我军缺乏足够的车辆来实现真正的机动部队，不过欧洲的经验给了我们一个便宜的选择。我们的军队必须能够首先到达战场，并保持良好的战斗状态，否则我们将会处于劣势，因此，我们只能组建银轮部队，他们成为全中国闻所未闻的闪击部队。"
+ shandong.989.a:0 "操！忘了车铃铛！"
+ shandong.990.t:0 "洞天神军训练"
+ shandong.990.d:0 "洋人理解不了中国人和天地之间的深切联系，这帮子洋人玩着他们铁与火的玩具，而我们则掌控着自然宇宙之力，我们受命于天，定将洋人赶出中国。"
+ shandong.990.a:0 "在石窟里靠一点残羹剩饭就能活着，真是可以了……"
 
  shandong.2.t:0 "路中节到了济南"
  shandong.2.d:0 "这天，靳云鹗逮到了个羞辱张天然的机会，为了在山上建立他的邪教，张天然不得不驱逐他的前师父路中一的妹妹路中节，最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。为了增加冲击力，靳云鹗带着他的老母亲来参加这个欢迎仪式。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来"
@@ -697,85 +654,6 @@
  shandong.9.t:0 "一贯道与农民暴动"
  shandong.9.d:0 "张天然在袭击济南途中遇害后，成千上万的哀悼者为寻回天师的遗骸而聚集到城市。但是很快，谣言便传遍各地，靳云鹗杀了所有的一贯道斗士，并卑劣的把他们和张天然一起埋到了万人坑里。恐怖气氛笼罩在山东之上，残余的一贯道信徒开始绝望地攻击警察和地主，镇民们绝望的在疯狂的信徒和妖魔化的靳云鹗之间来回踱步，最后选择把自己同外界相隔离，他们决心不再回应任何政治权威的号召，这个问题必须得到处理。"
  shandong.9.a:0 "杀了俩胆子大的，其他的都他妈疯了"
- shandong.10.t:0 "军官返校再教育"
- shandong.10.d:0 "山东缺乏训练现代军官的场所与设施，这个问题直接关系到那些在南北军校出身的鲁军军官们。众所周知，学历对于军官的能力至关重要，因此，我们必须把年富力强的军官派到海外去深造，当然，他们所去的学校与国家都会对他们的忠诚产生不可磨灭的影响。"
- shandong.10.a:0 "向日本军校申请"
- shandong.10.b:0 "向德国军校申请"
- shandong.10.c:0 "向西方军校申请"
- shandong.11.t:0 "山东的秘密军事计划"
- shandong.11.d:0 "显然，山东军队已经落伍了，虽然我们一直在努力提高我们的军事装备水平，但我们不敢在我们能买到的东西之外冒险。现在军队已经说服[SQI.GetLeader]向捷克人的军事项目里投资，这帮人有野心把几辆史蒂贝克卡车改成坦克，第二个计划是从天津购买飞鸽自行车，并培训一个单位专门使用，而济南大学教授提出的第三个计划是购买登山装备并集中训练，让士兵们在中国众多的山脉中生存下来。"
- shandong.11.a:0 "秘密的造辆坦克车"
- shandong.11.b:0 "秘密发展银轮部队"
- shandong.11.c:0 "洞天神军训练"
- shandong.12.t:0 "调查失踪的货物"
- shandong.12.d:0 "近几个月来，胶济铁路沿线的商业活动受到了严重的影响，警方正在调查，但是其所掌握的情况只能表明犯案者并非铁路职工，[SQI.GetLeader]已前来协助调查，以免此事件成为济南当局的丑闻。对青岛以外军警系统不敢恭维的警察们建议调查铁路中转站，而[SQI.GetLeader]则怀疑这些物品是在青岛和济南之间荒凉的乡村地带被盗的。所以我们先查哪儿？"
- shandong.12.a:0 "调查铁路系统"
- shandong.12.b:0 "调查边境"
- shandong.13.t:0 "铁路盗匪的证据？"
- shandong.13.d:0 "[SQI.GetLeader]的直觉是正确的。被派去调查这条铁路的警察在一些灌木丛下发现了可疑的踪迹。这些看起来像是一个垫子和行李带，毫无疑问，从铁路线上偷东西的人把货物从火车上扔了下来，然后把它转移到另一个地方。警察局长坚持认为一定是土匪干的，并寻求支援来调查胶东地区的土匪窝。"
- shandong.13.a:0 "好，给你加派人手"
- shandong.14.t:0 "在边境车站行贿的证据"
- shandong.14.d:0 "警察是对的，边境车站肯定是可疑的。在最初的检查中，边防的小棚屋只能容纳五个人。然而，在检查了小屋的地板后，发现了一个巨大的空壁龛。棚屋下面这么大的空地没有任何合理的用途，因此警察局长已经决定逮捕在场的边防警卫，虽然这有激怒青岛卖家的风险，但法律和正义是站在我们这边的。"
- shandong.14.a:0 "讯问车站保安"
- shandong.15.t:0 "围剿土匪"
- shandong.15.d:0 "几个兵沿着土路找着了一处土匪窝子，他们很快向上峰汇报，在[SQI.GetLeader]的命令下，警方派人来围剿土匪窝子。[SQI.GetLeader]的围剿打死了一些土匪，而遭不住的土匪们也送来了一份大礼，他们把一部分货交了出来，前提是得放他们走。"
- shandong.15.a:0 "钱算个屁，给我死！"
- shandong.15.b:0 "如果投降能免于生灵涂炭，我们同意"
- SQI_bandits_surrender:0 "土匪们和平投降"
- SQI_bandits_escape:0 "土匪把鱼饵扔过来，自己溜了"
- shandong.800.t:0 "反馈事件"
- shandong.800.d:0 "这是个反馈事件，你不该看到这个，如果你在没有加载任何子模组的正常游戏情况下看到了，那么请上报这个问题。"
- shandong.16.t:0 "边防警卫被捕，并承认走私"
- shandong.16.d:0 "这几个警卫很快就招了，他们声称是贫困驱使他们实施了这样一个计划：其中一名士兵拦截来自青岛的列车，而另一名士兵则从车上偷东西。这帮人用货物的下落来求饶，但[SQI.GetLeader]还是决定喂他们铁瓜籽，因为济南监狱实在是太挤了。"
- shandong.16.a:0 "正义是公平的，它高于一切"
- shandong.17.t:0 "我们的铁路安全了"
- shandong.17.d:0 "许多人并不相信铁路飞贼是被山东省的领导[SQI.GetLeader]所抓住的，他们还停留在济南当局腐败混乱的治理历史之中，当然，铁路飞贼的被捕也使得当局的政治声望得到提升，且铁路交通也得到了发展，我们到青岛的贸易线路从此畅通无阻。"
- shandong.17.a:0 "现在我们能重整铁路系统了"
- shandong.18.t:0 "土匪们交了货物之后跑到了河北"
- shandong.18.d:0 "强盗营地里传来一阵高卢式的表演。通过望远镜，[SQI.GetLeader]看到土匪们正准备投降，几个土匪窜进匪窝子里开始处理货物，最后，这几个土匪离开了仓库，脱下了衣服，放下了武器，开始把这些箱子拖向我们的阵地。[SQI.GetLeader]让手下停火，放这群人一条活路。士兵们哄堂大笑，羞辱这些土匪，以致没有人注意到又有一群土匪从树林里溜了出来，随后的交火让这帮裸身匪徒毙命，不过还是有些跑出了胶东地区。"
- shandong.18.a:0 "我们完蛋了，伙计们"
- shandong.19.t:0 "土匪于河北被捕，供认张宗昌贩毒"
- shandong.19.d:0 "最近从山东来了几个衣衫褴褛的人，这些难民自称是逃荒农民，但他们身上的伤疤表明他们要么是逃兵，要么是土匪。这帮人于河北被捕，并提交了[SQI.GetLeader]无能的证据，他的军队中充斥着毒贩子，这一情况迅速传到北京，我们的调查人员已在北京证实了证据的真实性。鸦片给中华大地造成了巨大的危害，并成为了中华民族耻辱的象征，对于我们来说这个问题十分严重。由于这一罪行的严重性，我么们必须对此千琢万磨。我们是要出兵恢复山东秩序，还是忽视这帮土匪的证据？大多数人认为[SQI.GetLeader]除非被赶下台，否则不会从政治舞台上离开。"
- shandong.19.a:0 "铲除毒贩子"
- shandong.19.b:0 "土匪信他们干啥"
- shandong.20.t:0 "一贯道寻求军事现代化"
- shandong.20.d:0 "消息传到了红枪会和大刀会等这些支持张天然的农民军耳中，他们开始向我们的地方官收购武器装备，不过他们所给的价钱属实惨不忍睹。然而地方官们却一起为他们背书，说支持他们就能削弱我们共同的敌人，我们可以私底下再给[SQI.GetNameDef]送一批武器，或者狠狠的揍他们的屁股。"
- shandong.20.a:0 "敌人的敌人就是我们朋友"
- shandong.20.b:0 "爷不支持这帮疯子"
- shandong.22.t:0 "部队完成日式骑兵训练"
- shandong.22.d:0 "日式骑兵训练结束了，新部队有了相当不错的纪律性，这有可能是我军新标杆，即胜利的结果远远优于手里的那点工资。虽然一些人仍然对信任日本的军事援助持谨慎态度，但好歹他们还没有背叛我们。"
- shandong.22.a:0 "武士过去可是骑马的"
- shandong.23.t:0 "部队完成察哈尔骑兵训练"
- shandong.23.d:0 "在山东的察哈尔骑手们已经练出了一支新的骑兵队，张天然对这支军队展现出的虔信很是满意，他在演讲时用了《水浒传》的大段文字，号召他们能跟圆寂前的鲁智深一样大彻大悟。"
- shandong.23.a:0 "见信而寂"
- shandong.24.t:0 "山东希望派军官进我们的学校进修"
- shandong.24.d:0 "山东督理靳云鹗替他的军官给我们的军校送来了申请，虽然我们过去确实收过中国学员，而且现在许多中国学员都在中国各地服役，但他们都是公认的政府军军官。综上所述，靳云鹗这个毕业于保定速成参谋学堂的半吊子很明显就不符合这标准。\n\n不过只要让他们入学，我们就能小赚一笔。"
- shandong.24.a:0 "接受他们吧"
- shandong.24.b:0 "滚！门都没有！"
- shandong.993.t:0 "日本人答应帮我们训练军官了"
- shandong.993.d:0 "山东年轻军官们现在都在准备去日本军校进修，他们将接受独一无二的训练，并能够使得我们在中华大地上那些不在乎日本人影响的家伙们眼中愈发受人尊重。"
- shandong.993.a:0 "真棒"
- shandong.994.t:0 "日本人拒绝培训我们的军官"
- shandong.994.d:0 "日本人不让我们的军官去军校进修，他们给靳云鹗贴上了“半吊子”的标签，而这批军官就只能靠自己的技术和经验谋前途，山东人也会在内心里暗暗记下这笔帐，这笔帝国主义王八蛋剥削掠夺中华大地的帐。"
- shandong.994.a:0 "爷还有德国人"
- shandong.25.t:0 "山东希望派军官进我们的学校进修"
- shandong.25.d:0 "山东督理靳云鹗替他的军官给我们的军校送来了申请，虽然我们过去确实收过中国学员，而且现在许多中国学员都在中国各地服役，但他们都是公认的政府军军官。综上所述，靳云鹗这个毕业于保定速成参谋学堂的半吊子很明显就不符合这标准。\n\n不过只要让他们入学，我们就能小赚一笔。"
- shandong.25.a:0 "接受他们吧"
- shandong.25.b:0 "我们不是伪善者"
- shandong.995.t:0 "德国人接受我们的军官入学"
- shandong.995.d:0 "山东年轻军官们现在都在准备去德国军校进修，他们将接受独一无二的训练，并能够使得我们在中华大地上那些不在乎德国人影响的家伙们眼中愈发受人尊重。"
- shandong.995.a:0 "真棒"
- shandong.26.t:0 "山东希望派军官进我们的学校进修"
- shandong.26.d:0 "山东督理靳云鹗找到我们，希望我们派一批世界大战老兵帮他们训练军队。的确，在法国投降，英国革命之后，大批老兵来到了此地从事保安工作，然而靳云鹗这混蛋手上属实是不干净。我们倒是能搞这笔生意，不过风险也不小。"
- shandong.26.a:0 "能赚钱管他的呢"
- shandong.26.b:0 "太危险了"
- shandong.27.t:0 "山东矿业权问题"
- shandong.27.d:0 "自从十年前曲同丰与新皖系的关系破裂以来，人们就一直对是否向外国企业出售采矿权持谨慎态度，他们并不缺少赚钱的机会，但由于害怕显得太像卖国贼，因此迄今为止，他们还没有做出任何决定。现在山东现在终于实现了稳定，我们也能处理这个事了，现在报价的有在威海的旅大矿业集团，在青岛的克虏伯和向中国人提供无效股票的皮博迪能源公司。"
- shandong.27.d1:0 "自从十年前曲同丰与新皖系的关系破裂以来，人们就一直对是否向外国企业出售采矿权持谨慎态度，他们并不缺少赚钱的机会，但由于害怕显得太像卖国贼，因此迄今为止，他们还没有做出任何决定。现在山东现在终于实现了稳定，我们也能处理这个事了，因此我们在投资者的支持下选择了日本的旅大矿业集团。"
- shandong.27.d2:0 "自从十年前曲同丰与新皖系的关系破裂以来，人们就一直对是否向外国企业出售采矿权持谨慎态度，他们并不缺少赚钱的机会，但由于害怕显得太像卖国贼，因此迄今为止，他们还没有做出任何决定。现在山东现在终于实现了稳定，我们也能处理这个事了，因此我们在投资者的支持下选择了德国的克虏伯公司。"
- shandong.27.a:0 "接受旅大矿业集团的提议"
- shandong.27.b:0 "接受克虏伯的提议"
- shandong.27.c:0 "接受皮博迪能源公司的建议"
  shandong.28.t:0 "张敬尧寻求安庆当局的庇护"
  shandong.28.d:0 ""
  shandong.28.a:0 "好，请加入正义的一方"
@@ -835,21 +713,6 @@
  shandong.102.t:0 "日本工程师在卖东西之前就被抓了"
  shandong.102.d:0 "秘密交易失败了，我们与日本工程师失去了联系。这些人在对川崎的一次突击搜捕中落网，这事儿可不太妙，我们在海军设计上花的资源都打了水漂。"
  shandong.102.a:0 "我们会记得的"
- shandong.996.t:0 "使馆城接受了我们的军官"
- shandong.996.d:0 "使馆城给我们带来了好消息！天津的使馆城当局已经接受了我们的请求，派了一批世界大战老兵来我们这里帮着练兵，并且帮助我们的军官们适应现代化战争。抛开纪律问题，他们对提升我们的战力还是有点帮助的。"
- shandong.996.a:0 "真棒"
- shandong.997.t:0 "使馆城拒绝了我们的要求"
- shandong.997.d:0 "使馆城市对资助我们的请求不理不睬，并且拒绝了帮助练兵的请求。张宗昌1925年在上海整的烂活让洋人属实火冒三丈高。"
- shandong.997.a:0 "糟透了！"
- shandong.988.t:0 "实验型坦克建设"
- shandong.988.d:0 "我军的几个军官曾经见识过德国装甲部队的作战，尽管这看似不可能，但是我们最终打造出了中国自主知识产权的坦克车！虽然其中有些组件是被摧毁的八省联合的遗产，但是大多数还是中国制造。现在我们已经学会怎么制造装甲载具了，我们就能给敌人送个大宝贝过去。"
- shandong.988.a:0 "这东西还能跑得起来"
- shandong.989.t:0 "欧式银轮部队训练"
- shandong.989.d:0 "显而易见，我军缺乏足够的车辆来实现真正的机动部队，不过欧洲的经验给了我们一个便宜的选择。我们的军队必须能够首先到达战场，并保持良好的战斗状态，否则我们将会处于劣势，因此，我们只能组建银轮部队，他们成为全中国闻所未闻的闪击部队。"
- shandong.989.a:0 "操！忘了车铃铛！"
- shandong.990.t:0 "洞天神军训练"
- shandong.990.d:0 "洋人理解不了中国人和天地之间的深切联系，这帮子洋人玩着他们铁与火的玩具，而我们则掌控着自然宇宙之力，我们受命于天，定将洋人赶出中国。"
- shandong.990.a:0 "在石窟里靠一点残羹剩饭就能活着，真是可以了……"
  shandong.51.t:0 "山东想买重巡"
  shandong.51.d:0 "宪兵队把川崎造船厂内向山东出卖海军设计方案的几个工程师抓了起来，宪兵队已经准备好搅黄这摊子事儿，但是我们还有另一个方法处理此事，如果宪兵队就只是抓了人，对这桩交易不闻不问的话，我们就能把这个事情合法化，这事儿风险不小，不过山东也不是啥强国，一丁点军售应该不会被阻止……吧？"
  shandong.51.a:0 "警告川崎继续交易"
@@ -1023,10 +886,6 @@
  SQI_zhi_feng_zhi_jian:0 "直奉之间"
  SQI_zhi_feng_zhi_jian_desc:0 "从1920年直皖战争，皖系战败之后，靳云鹗就投奔了吴佩孚。但是没有人能一直仰人鼻息，现在直奉交锋的大环境之下，孙传芳已死，南方陷入动乱，而靳云鹗也有着自己的野心。"
 
- SQI_honored_master_2:0 "上师"
- SQI_honored_master_2_desc:0 "在泰山之巅，张天然成功让臭名昭著的张宗昌皈依于一贯道，于是乎，世界的目光开始远离腐败的济南，而转到张天然一人身上。上师外露谦和，然内心狡诈。他的影响力已经跨越泰山，在山东半岛蔓延开来。"
- SQI_honored_master_3:0 "上师"
- SQI_honored_master_3_desc:0 "在泰山之巅，张天然成功让臭名昭著的张宗昌皈依于一贯道，于是乎，世界的目光开始远离腐败的济南，而转到张天然一人身上。上师外露谦和，然内心狡诈。他的影响力已经跨越泰山，在山东半岛蔓延开来。"
  SQI_ke_pu_du_wu:0 "科普读物"
  SQI_ke_pu_du_wu_desc:0 ""
 
