--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -1422,8 +1422,8 @@
  shx.earlygame.4.d:0 "德国采矿公司使用的破坏力巨大的采掘方式引发了与当地农民之间的冲突，虽然迄今为止抗议的规模还很小，但有人担心紧张局势可能会超出掌控，破坏资源在市场上的流动。"
  shx.earlygame.4.a:0 "该死。"
  shx.earlygame.5.t:0 "十年一梦"
- shx.earlygame.5.d:0 " "
- shx.earlygame.5.a:0 " "
+ shx.earlygame.5.d:0 "山西王在恩师赵戴文陪同下站在关帝山巅向东望去，猎猎风中夹杂的些许寒意竟不由得让他打了个哆嗦。阎锡山不由得看了看手上长出的老人斑，他已五十有四，赵师更是已入古稀之年，十年前意气风发的模范省都督，两年后就不得不黯然下台，甚至还要让恩师充当自己的挡箭牌，窝囊至此。\n造化弄人，没想到如此窝囊也还不是尽头，山西王想起冯玉祥那张脸木讷的脸，不由得从鼻孔里呼出一长串气体。当年他被吴佩孚打的丢盔弃甲，差点就把命交代在北京，跑来求我救他一命，还说什么做结拜兄弟，齐头并进。那个两面三刀阴险狡诈的伪君子，他一辈子所干的事不就是两面讨好，首鼠两端，在辛亥站革命党，在北京站国民党，真不知道当时的自己是哪里不对，竟答应了他。如今他每作出决策，转眼间都会被质疑声悄然包裹，除了那个小人还能有谁，还有他屡次三番阻挠晋陕一体，想借着在长安的名头把自己赶下台，延安铁路到现在都没建成，他冯玉祥就负一大半责任！还说什么为民为国，终究是个不堪大用的伪君子！\n长呼一口气，山顶的冷风让阎锡山的心获得了些许平静，他和赵师是都老了，但老了又如何！他冯玉祥现在，也不过是个没用的胖子，吴佩孚逼我是他有兵，你冯玉祥又有什么！阎锡山目光闪烁，张作霖盘算南下盘算了这么久，估计也快了，到时候老天爷才知道冯张二人会不会又眉来眼去相互勾结，这件事宜早不宜迟了。得想个法子，彻底了解这十年的恩怨。\n又一阵冷风拂过，阎锡山仿佛恍然梦醒，他呆然垂首，望了望晋东六地，便别过了头。"
+ shx.earlygame.5.a:0 "“纵有千种风情，更与何人说？”"
  shx.earlygame.6.t:0 "夜谈"
  shx.earlygame.6.d:0 "“次陇兄，兹事体大，还望您多加考虑呀！”\n“濬源，正是因兹事体大，我才说此时敲定为时尚早，不应操之过急。”模范省省会——太原城内一间不起眼的房屋中，二人争执之声在夜间虫鸣中稍显刺耳。在桌畔的二人是山西银行总经理王骧王濬源，在对面坐着的，正是当今山西省督理赵戴文。\n“你也知道，本省屡遭兵祸，近期方才恢复部分元气，这自给自足模范立省的旗帜正是当猎猎作声之时，你此时提出让京城来投资，不正是砸自己招牌，无异于在我们模范省的名号上自唾其面吗。你我同为晋商后民，祖宗如何自立自强、奋发不息，忘了？”\n“次陇兄，你我固然同为晋商晋人，然我必须提醒您，你我首先还是大清国人。如今朝廷抛来这橄榄枝，往好了说是敬重本省自治，但自治之上，仍有朝廷，不过因小失大，以自治为名抗命呀。如今朝廷与德国携手并进，共创繁荣，德国人给钱，咱们拿钱开厂，造福全省全国黎民百姓，这难道不是福泽众生之事？君不见北至大同南至晋城，我辈晋人正是在朝廷关怀之下，民生方得有如此进步？”\n赵戴文眼底划过一抹怒火，“这狗娘养的胆敢在我面前提起失陷的晋东六地“，一想晋东六地，这片与他操着相同口音的土地，一同他的家乡五台与他第一次接触佛法的五台山，都身处北京而非太原节制之下，他就似乎要丢掉佛经里的宽厚慈悲之道。王骧这厮天天跟在吴佩孚屁股后头，别的没学会，敲诈勒索的手段倒是突飞猛进。然而，北京终究是京城，如今的太原也仍尚未光复往日盛景。赵戴文挤出一个微笑：“也罢，濬源，我也是老糊涂，这点道理都想不通，还要靠你点醒，京城毕竟是贵人多啊。这样，今晚时候不早了，我明早肯定给你一个满意的答案。“说罢端起了茶杯。王骧眼中闪烁，顾不得赵戴文话中带刺，起身连声告辞，飞也似的走出了房间。\n“呸，一条狗！你等着吧，数典忘祖的东西。”“罢了赵师，时局如此，我等也如今无可奈何啊。”阎锡山的声音在屏风后响起，明明只有一层屏风，他的声音却仿佛来自遥远的过去或是未来。“你说，咱们真就这么遂了他的愿？”“时局如此，时局如此啊。不积跬步，无以至千里。赵师，这个道理也是你教给我的。近期各地异动不断，我看朝廷也是蓄势待发，此时还是宜暂避锋芒。”阎锡山的目光向东望去，那边是晋东六地，更是北京所在之处。“这笔买卖还不算完，孰盈孰亏，还在后头呢。”"
  shx.earlygame.6.a:0 "君子报仇..."
