--- a/localisation/KR_Fengtian_l_simp_chinese.yml
+++ b/localisation/KR_Fengtian_l_simp_chinese.yml
@@ -38,7 +38,7 @@
  FNG_zhang_zuoxiang: "张作相"
  POLITICS_ZHANG_ZUOXIANG_ARMY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1881年\n大清帝国 奉天 锦州\n§Y军旅生涯：§!§g张作相出身一个半农半商的贫寒家庭，在族兄被土匪所杀后跟随张作霖投身绿林。他曾经两次和张作霖结拜为盟兄弟，并被后者在1925年任命为吉林省的省长。相比黑龙江省的省长吴俊升，他在统治吉林期间的内政政绩还算突出，比如创办大学和修筑铁路。虽然张作相不再是吉林省的省长，但是他依然在吉林有着巨大的影响力，且他仍是张作霖大帅核心圈子里的忠实支持者。他本人也被认为是鱼龙混杂的张氏集团的实际掌门人。\n他是稳定奉系的重要人物，曾在郭松龄叛乱失败后保护了郭松龄的下属，避免了奉系陷入自相残杀的局面。\n不少人认为他和张作霖是兄弟，其实他们只是名字上的巧合，没有宗族关系。§!"
  FNG_yang_yuting: "杨宇霆"
- POLITICS_YANG_YUTING_ARMY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1885年8月29日\n大清帝国奉天省法库县\n§Y军旅生涯：§!§g杨宇霆在早年是奉系的一位参谋长，曾经和皖系的徐树铮一起劫持过直系的军火。此后，他历任奉军参谋长、东北陆军训练总监、东三省兵工厂总办。\n\n虽是张作霖核心圈子里的一分子，但杨宇霆还和关东军有着相当程度的联系，这也导致他不受圈子内其他人的待见。他本人在私下里把日本人称作是让自己飞黄腾达的梯子。他反对张学良继任张作霖的位置，并以地方主义而著称；同时他也怀疑张作霖统一中国的理想。\n\n虽然杨宇霆本人可以视为协和会的一员，但更准确的说，他是由一批赴东洋留学的奉天军官组成的“士官派”的领袖。§!"
+ POLITICS_YANG_YUTING_ARMY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1885年8月29日\n大清帝国奉天省法库县\n§Y军旅生涯：§L\n杨宇霆在早年是奉系的一位参谋长，曾经和皖系的徐树铮一起劫持过直系的军火。此后，他历任奉军参谋长、东北陆军训练总监、东三省兵工厂总办。\n\n虽是张作霖核心圈子里的一分子，但杨宇霆还和关东军有着相当程度的联系，这也导致他不受圈子内其他人的待见。他本人在私下里把日本人称作是让自己飞黄腾达的梯子。他反对张学良继任张作霖的位置，并以地方主义而著称；同时他也怀疑张作霖统一中国的理想。\n\n虽然杨宇霆本人可视为协和会的一员，但更准确的说，他是由一批赴东洋留学的奉天军官组成的“士官派”的领袖。§!"
  FNG_wang_shuchang: "王树常"
  POLITICS_WANG_SHUCHANG_ARMY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1885年9月1日\n大清帝国 奉天 辽中\n§Y军旅生涯：§!§g王树常早年以优异的成绩毕业于奉天大学堂，被徐世昌保送到日本军校学习。他在回国后参加过辛亥革命，担任过南京临时政府和北洋政府的参谋。他在1921年回到奉军，之后长期在奉系充当参谋长。\n他是一位受人尊敬、但政治立场不明确的军官。尽管曾赴东洋留学，但是他本人除了日常交际之外并没有和协和会与士官派有太多交集。除了重要事件之外，他极力避免自己对涉日事物进行褒贬。§!"
  FNG_ma_zhanshan: "马占山"
