--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -444,7 +444,7 @@
  lec.9.a:0 "我们总能找到这笔钱的用处"
  lec.10.t:0 "恢复俄罗斯表决权？"
  lec.10.d:0 "使馆城市被建立时，俄罗斯作为在中国拥有租界的国家，自然也享有工部局的表决权。不幸的是，有两个俄罗斯同时存在。克伦斯基的俄罗斯共和国拥有更多的国际认同，而高尔察克上将的符拉迪斯沃克政府则离我们更近且获得了东京方面的支持。这导致了双方政府被给予了同加拿大和澳大拉西亚一样的观察员地位。但现在既然[RUS.GetNameDef]是无可置疑的俄罗斯，来自圣彼得堡的大使已经在催促我们恢复他政府的表决权了。\n\n由于这是一个相当实际的问题，从流程上讲，这需要通过使馆城市工部局的表决。但鉴于日本和德国这两个俄罗斯的竞争对手完全不会同意，我们可以让使馆城市工部局主席推动这一流程。虽然这可以引入一名与日本和德国毫无瓜葛的强力成员，但也会打乱工部局中的势力分布。"
- lec.10.a:0 "使馆城理事会必须对此进行表决"
+ lec.10.a:0 "使馆城市工部局必须对此进行表决"
  lec.10.b:0 "这事不过是走个程序罢了"
  lec.11.t:0 "使馆城市工部局就恢复俄罗斯表决权进行投票"
  lec.11.d.notjapan:0 "多少年来，工部局中一直萦绕着高尔察克上将的外阿穆尔和[RUS.GetNameDef]的两股俄罗斯声音。而现在既然前者已经被清出世界舞台，看起来是时候恢复俄罗斯的表决权了。不过从地缘政治上来看，俄罗斯毫无疑问是欧亚大陆上的一个威胁，一些人质疑如此轻易地让他们获得更多的影响力是否不太明智。"
