--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -1797,7 +1797,7 @@
  YUN_join_axis_of_bosses:0 "加入老大轴心"
  YUN_reichspact:0 "加入帝国公约"
  YUN_entente:0 "加入协约国"
- POLITICS_YUNNAN_REGENCY_DESC:0 "随着唐高祖去世，帝国的最高政府机构尚书省的摄政议会将把持朝政，直到皇位继承者的问题最终得到解决。虽然高祖，也就是曾经的唐继尧，似乎清楚表示了要让自己与皇后的孩子继承大统，由皇后摄政，但这个说法其实从未有成文记录。再加上“真正的继承人”还只是一个婴儿，高祖的其他亲属也拥有继承权。结合种种原因，使得这个由官员和贵族组成的临时政府拥有了必要性，临时政府将指导帝国以度过这场继承危机。摄政议会本身由四名成员组成，每名成员都来自已故皇帝生前的亲自挑选，并由尚书省与一大群随行官员和宦官协助履行职责。这四位尊贵的成员分别是皇后本人、高祖弟弟唐继虞、高祖长子唐绍骧和帝国的经济大师缪云台。在迎来新生的大唐选出新皇帝之前，这四位贵族将共治帝国，为这混乱的哀悼时代带来些许稳定。"
+ POLITICS_YUNNAN_REGENCY_DESC:0 "随着唐高祖去世，帝国的最高政府机构尚书省的摄政议会将把持朝政，直到皇位继承者的问题最终得到解决。虽然高祖唐继尧，似乎清楚表示了要让自己与皇后的孩子继承大统，由皇后摄政，但这个说法其实从未有成文记录。再加上“真正的继承人”还只是一个婴儿，高祖的其他亲属也拥有继承权。结合种种原因，使得这个由官员和贵族组成的临时政府拥有了必要性，临时政府将指导帝国以度过这场继承危机。摄政议会本身由四名成员组成，每名成员都来自已故皇帝生前的亲自挑选，并由尚书省与一大群随行官员和宦官协助履行职责。这四位尊贵的成员分别是皇后本人、高祖弟弟唐继虞、高祖长子唐绍骧和帝国的经济大师缪云台。在迎来新生的大唐选出新皇帝之前，这四位贵族将共治帝国，为这混乱的哀悼时代带来些许稳定。"
  YUN_attack_hunnan:0 "我们会要求§Y湖南§!归还§L镇远§!，向我们投降！\n"
  POLITICS_YUNNAN_CHEN_GUOFU_DESC:0 "§Y领导人介绍\n生于：§!§g1892年10月27日，浙江省湖州府§!\n§Y政治生涯：§!§g早年间，陈果夫一直生活在名人二叔陈其美的阴影下。陈其美是中华民国的缔造者之一，也是孙中山的盟友、蒋介石的导师。在二叔的指引下，陈果夫加入了同盟会，参与辛亥革命。\n\n1916年陈其美遇刺后，陈果夫和弟弟陈立夫结识了二叔的追随者蒋介石，他们成为了亲密的朋友，并展开广泛的合作。1920年，陈果夫和蒋介石等人在上海经营证券物品交易所，为国民党筹集资金。蒋介石升任黄埔校长后，陈果夫在上海为军校招募新生，官运日渐亨通。\n\n北伐惨败时，老友蒋介石遇刺，陈氏兄弟和多股国民党残余一样，从广州逃往云南。陈果夫成为了国民党右派的突出人物，坚决反对中央执行委员会与工团国家结盟。如今执掌国民党，有兄弟的帮助，他绝不会坐视孙中山的国民革命陷入黑暗，决不——他要以蒋介石、陈其美等所有为国捐躯的烈士之名，将国民革命重塑成应有的样子。§!"
  yun.523.t: "两广接受"
