--- a/localisation/KR_game_rules_l_simp_chinese.yml
+++ b/localisation/KR_game_rules_l_simp_chinese.yml
@@ -1572,7 +1572,11 @@
  RULE_GERMANY_FLAGS_REAL:0 "£KR_game_rule_flag_GER_blackwhitered 史实"
  RULE_GERMANY_FLAGS_REAL_DESC:0 "德国将使用史实国旗。"
  RULE_OPTION_SRI_START_ELECTION_GARIBALDI:0 "£GFX_KR_game_rule_flag_SRI_confederation 加里波第二世"
- RULE_OPTION_SRI_START_ELECTION_GARIBALDI_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程。"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程。不过，两国究竟能不能冰释前嫌，这没人说得准。"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_REPUBLIC:0 "£GFX_KR_game_rule_flag_SRI_confederation 新共和国"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_REPUBLIC_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程。不过，由于共和政府不接受任何形式的君主制，两国的谈判最终无果而终。"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_SARDINIA:0 "£GFX_KR_game_rule_flag_SRI_confederation £KR_game_rule_flag_SRD 撒丁联统"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_SARDINIA_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程，最终实现了撒丁和北意大利的联合君主立宪制。"
  RULE_OPTION_PAP_NEWCONCLAVE_AUTHDEM:0 "£KR_game_rule_flag_PAP 哈德良七世"
  RULE_OPTION_PAP_NEWCONCLAVE_AUTHDEM_DESC:0 "奉行威权民主立场的哈德良七世当选。"
  RULE_OPTION_PAP_NEWCONCLAVE_SOCLIB_DESC:0 "奉行社会自由立场的本笃十六世当选。"
