--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -180,16 +180,24 @@
 
  SQI_honored_master:0 "上师"
  SQI_honored_master_desc:0 "在泰山之巅，张天然成功让臭名昭著的张宗昌皈依于一贯道，于是乎，世界的目光开始远离腐败的济南，而转到张天然一人身上。上师外露谦和，然内心狡诈。他的影响力已经跨越泰山，在山东半岛蔓延开来。"
+ SQI_Rampant_drug_trade:0 "猖獗的毒品贸易"
+ SQI_Rampant_drug_trade_desc:0 "自英国人将鸦片输入中国以来，毒品就开始毒害中国人，直到如今以及快要一百年了。对于山东，不管是德国人，还是当年的张宗昌都为毒品贸易煽风点火从中获利。如今的靳云鹗亦不能幸免，在黄金的面前，良心从来不是什么重要的东西。"
  SQI_flight_north:0 "飘向北方"
  SQI_flight_north_desc:0 "为躲避南方的混乱，从前山东人为主的闯关东，却反过来变成了流民们逃难山东，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，仅仅是将山东当作逃难的一个落脚点。而流民的涌入最直观的体现便是粮食危机的加剧。人均拥有的耕地再下一个台阶，山东地区的粮食危机以及到了无法忽视的地步。1935年的黄河决堤更是令本就饥饿的山东雪上加霜。"
  SQI_liang_shi_wei_ji_jia_ju:0 "粮食危机"
  SQI_liang_shi_wei_ji_jia_ju_desc:0 "为躲避南方的混乱，从前山东人为主的闯关东，却反过来变成了流民们逃难山东，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，仅仅是将山东当作逃难的一个落脚点。而流民的涌入最直观的体现便是粮食危机的加剧。人均拥有的耕地再下一个台阶，山东地区的粮食危机以及到了无法忽视的地步。1935年的黄河决堤更是令本就饥饿的山东雪上加霜。\n\n农夫苦农夫苦，锄禾日当午，背赤紫汗滴禾下土，终日劳作不息至。农夫苦农夫苦，天旱地又枯釜中无粒粟，儿女牵衣泪如雨。农夫苦农夫苦，吏催租收成不足，无钱付，只得咬牙切齿售儿女。"
  SQI_liang_shi_wei_ji_jia_juA:0 "赈济灾民"
  SQI_liang_shi_wei_ji_jia_juA_desc:0 "为躲避南方的混乱，从前山东人为主的闯关东，却反过来变成了流民们逃难山东，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，仅仅是将山东当作逃难的一个落脚点。而流民的涌入最直观的体现便是粮食危机的加剧。人均拥有的耕地再下一个台阶，山东地区的粮食危机以及到了无法忽视的地步。1935年的黄河决堤更是令本就饥饿的山东雪上加霜。\n\n农夫苦农夫苦，锄禾日当午，背赤紫汗滴禾下土，终日劳作不息至。农夫苦农夫苦，天旱地又枯釜中无粒粟，儿女牵衣泪如雨。农夫苦农夫苦，吏催租收成不足，无钱付，只得咬牙切齿售儿女。"
+ SQI_ke_pu_du_wu:0 "科普读物"
+ SQI_xin_ru_xue:0 "儒学教育"
+ SQI_xin_ru_xue_desc:0 "靳大帅并不在乎儒生们一天到晚在研究个什么，也不关心所谓的新旧儒学，他在乎的只有一件事情那就是山东豪强们的臣服，他不介意让渡一些教育上的权力。"
+ SQI_yi_guan_dao_de_cai_fu:0 "一贯道的财富"
+ SQI_yi_guan_dao_de_cai_fu_desc:0 "道徒们忙忙碌碌一辈子的财富全部上交给了张天然，而现在，最后又全部给靳大帅做了嫁衣。"
+ SQI_flee_to_zongchang2:0 "权力稳固"
+ SQI_flee_to_zongchang2_desc:0 "山东经年累月的矛盾如疾风暴雨般倾泻而出，而靳云鹗抗住了压力，现在他的敌人们一个个被送上审判席，没有人再能在山东挑战靳云鹗督理的地位。"
+ SQI_Baojia_System:0 "保甲制"
  SQI_liang_shi_wei_ji_jia_juB:0 "稳固的粮食安全"
  SQI_liang_shi_wei_ji_jia_juC:0 "农业补贴工业"
- SQI_Rampant_drug_trade:0 "猖獗的毒品贸易"
- SQI_Rampant_drug_trade_desc:0 "狗日的张宗昌抽大烟成瘾，他的那支该死的军队也是一个巨大的毒窝。这给山东的督理靳云鹗带来了无穷的困扰，政府财政在无穷的毒品潮中濒临崩溃"
  SQI_gea_influence_idea0:0 "德国人的影响力：§R微弱§!"
  SQI_gea_influence_idea0_desc:0 "§Y[GER.GetName]对我们的经济有可见的控制！§!"
  SQI_gea_influence_idea1:0 "德国人的影响力：§R轻微§!"
@@ -216,8 +224,8 @@
  SQI_Yiguandao_revolt_desc:0 "如果天师去世，那么一贯道就会由其副手和次级管理者运营。目前一贯道正让信徒们焚烧财产，并移居到石窟里，以预备大劫的到来。因此我们现在还不能从这批人身上捞到东西。"
  SQI_Peasant_revolt:0 "农民暴乱"
  SQI_Peasant_revolt_desc:0 "济南当局和泰山之巅所达成的交易为世人所不满，税吏正肆无忌惮的征税，道路也被诸多豪强霸占，囤积武器反对政府的活动也达到了高潮。为了能重新取信于山东人民，我们必须向农村派驻兵马。"
- SQI_Zongchang_revolt:0 "张宗昌残部暴乱"
- SQI_Zongchang_revolt_desc:0 "无论张宗昌为人如何，他手底下的士兵、债主和官吏都曾是山东合法政府的一份子。现在，这帮人漫无目的地劫掠人民，这帮混蛋和他们的魔鬼都得给爷下地狱。"
+ SQI_Zongchang_revolt:0 "靳云鹗残部暴乱"
+ SQI_Zongchang_revolt_desc:0 "无论靳云鹗为人如何，他手底下的士兵、债主和官吏都曾是山东合法政府的一份子。现在，这帮人漫无目的地劫掠人民，这帮混蛋和他们的魔鬼都得给爷下地狱。"
  SQI_flee_to_zongchang:0 "权力稳固"
  SQI_flee_to_zongchang_desc:0 "山东经年累月的矛盾如疾风暴雨般倾泻而出，而靳云鹗抗住了压力，现在他的敌人们一个个被送上审判席，没有人再能在山东挑战靳云鹗督理的地位。"
  SQI_flight_to_safety:0 "投向屈映光"
@@ -387,6 +395,8 @@
  SQI_yao_qing_de_guo_zhuan_jia:0 "邀请德国工业专家"
  SQI_de_guo_gong_ye_yuan_zu:0 "德国工业援助"
  SQI_gu_li_guo_huo:0 "鼓励国货"
+ SQI_gu_li_guo_huo_not:0 "鼓励“国货”"
+ SQI_gu_li_guo_huo_not_desc:0 "山东制造，大帅精选，我的选择"
  SQI_agricultural_reform_mission_timer:0 "解决粮食危机"
  SQI_jiang_di_dian_zu:0 "耕者有其田"
  SQI_jiang_di_dian_zu_desc:0 "农民能够占到我省人口的百分之九十，耕种优质农田的大多数都是雇农、佃农或者半佃农，自耕农们只拥有那些贫瘠的土地。然而同时，省内山东大地主并不多，大部分情况下农民们也是按照资本主义的方式雇佣，时土地使用权与所有权的分散，使得拥有相当土地的地主、富农将自己无力耕种的土地或租佃或雇工经营，而农民自身不仅缺少资金、牲畜、种子及生产工具，还极易受到各种因素的影响，如婚丧、天灾等，因此不可能租种整批田地。为了解决这种情况，我们就需要让地主们全身心的投入，让农民们赎买他们耕种的土地，去实现孙中山所谓的“耕者有其田”。"
@@ -443,14 +453,6 @@
  SQI_Song_Zheyuan_desc:0 "军阀们对山东的破坏显而易见：鸦片和腐败横行，渗透到社会的每个角落，而政府官员不过是这些大土匪手下的小土匪强盗。现在屈映光已经重掌山东大权，依靠手下的研究会和中央政府的资金帮助，他会让山东摆脱苦难，重建这里的秩序。"
  SQI_Preparing_Integration_With_The_Qing:0 "寻根"
  SQI_Preparing_Integration_With_The_Qing_desc:0 "二张已除，山东重回北京当局的怀抱之中，不仅山东的文化遗产能得到保护，而且我们心中酝酿的消灭列强影响的梦想也已近在咫尺。"
- SQI_Zhang_Zongchang:0 "骁威将军，风光万里"
- SQI_Zhang_Zongchang_desc:0 "张宗昌、张天然、屈映光...有太多的人盯着靳云鹗的位置了，他们都想要在这个乱世混出个名堂，但是这些等闲之辈又岂能击败大将军呢？山东只能由骁威将军靳云鹗说了算，没人在能动摇他的地位。"
- SQI_Appointing_Lu_Zhongyi_Leader_Of_The_Yiguandao:0 "让路中节当天师"
- SQI_Appointing_Lu_Zhongyi_Leader_Of_The_Yiguandao_desc:0 "靳云鹗在与一贯道的政治斗争中学到了一些教训，即山东的混乱让很多老百姓开始寻求宗教的安慰，为了切断一贯道与政治的联系，靳云鹗请满怀感激之情的路中节当天师，并让她远离政治，做好一个吉祥物该做的事情。"
- SQI_Clearing_Out_Mount_Tai_Of_The_Yiguandao:0 "泰山一游"
- SQI_Clearing_Out_Mount_Tai_Of_The_Yiguandao_desc:0 "张天然死后，泰山之上就打成了一锅粥，各路人马都在宣称自己是新天师，想要继承张天然的遗产。主要是那无数的黄金，当然了，既然我们选择支持路中节，那我们就有必要也申明我们才是这一笔财产的唯一继承人，而他们给也得给，不给也得给。"
- SQI_Assassinating_Bureaucrats_Threatening_The_Opium_Trade:0 "控制毒品贸易"
- SQI_Assassinating_Bureaucrats_Threatening_The_Opium_Trade_desc:0 "山东的经济糟糕透顶，但是山东的鸦片生意却又是成天到晚火爆得不行，凭借着德国人的港口还能向外输送。但是这样经济来源此前完全不受靳督理的掌控，直到现在他终于能够完全掌握这笔钱了。"
  SQI_Advertising_Shandong_As_A_Model_Province_In_Beijing:0 "山东是个模范省"
  SQI_Advertising_Shandong_As_A_Model_Province_In_Beijing_desc:0 "模范省的概念不是山东能独立的原因，但是很快它就会成为山东自治的重要论据之一。山东的公务员们将制造山东的正面消息，并确保外国人老老实实的呆在城里。"
 
@@ -601,6 +603,9 @@
  SQI.6.t:0 "来来往往"
  SQI.6.d:0 "即便南方的战火为山东带来了数不胜数的难民，但与此同时破产的山东农民也在无可奈何中逃离山东。在清末开始山东人均耕地面积就在3亩左右徘徊。绝大多数的农民存在着严重的生存危机。对于拥有少量土地的农民来说可以通过佃入土地维持生活。但是，一旦遇到天灾人祸，无地少地的农民便无力抵抗，他们不得不出卖自己的土地，为了生存或只身前往或全家行动。他们不得不铤而走险，离村便是一大趋势，至于什么“安土重迁”都抛在了一边，因为只有离开才能有希望活着。而逃离一旦开始，就不再是一个农民的行为，往往是家庭或者整个家族的集体迁移。闯关东、下南洋、走西口...\n\n这对于我们而来当然是一个灾难，逃亡而来的难民早已变得虚弱不已，逃荒出去的农民却是我们的精壮劳动力，大规模的人口迁移导致了耕地的迁出地土地的大规模荒芜，也导致各种各样的宗教思想，尤其是那帮子一贯道徒的影响力与日俱增，我们最好赶快把难民们全部赶到耕地里去，否则更恐怖的粮食危机还在后面等着我们。而那帮子邪教徒必须尽快掐死在胎里。"
  SQI.6.a:0 "山东的事情为什么这么糟糕？"
+ SQI.7.t:0 "同刘子山的合作"
+ SQI.7.d:0 "刘子山是华北无数去青岛讨生活的人之一，靠着语言天赋早早学会了德语，随后在青岛混得如鱼得水，尤其是1905年，在德国人的授意下参手了山东鸦片生意，因为其他徳属鸦片商们纷纷退出，最后其垄断了山东的鸦片销售，赚了个盆满钵满，赚得多了就开始搞实业，开设大窑沟福合永窑厂、孤山窑厂、海西窑厂，收购永利号汽车行与永利号铁工厂经营汽车进口与客运。后来又搞起了银行，投资山东工商业，房地产，还落了个“刘半城”的名声。搞得那些曾经的同行们十分眼红，丁敬臣那家伙还花了几十万白银在东亚监事会上下打点希望换取自己来独家经营，最后完全没有得到人家的回应，白白花掉几十万。而在全球禁止明面上的毒品贸易后，这位大商人虽然也开始金盆洗手，但是他从来没有真正的脱离过鸦片业。我们想要掌握这一行业自然离不开他的帮助。他也会很愿意同我们合作谋求更大的利益。"
+ SQI.7.a:0 "合作愉快"
 
  shandong.20.t:0 "一贯道寻求军事现代化"
  shandong.20.d:0 "消息传到了红枪会和大刀会等这些支持张天然的农民军耳中，他们开始向我们的地方官收购武器装备，不过他们所给的价钱属实惨不忍睹。然而地方官们却一起为他们背书，说支持他们就能削弱我们共同的敌人，我们可以私底下再给[SQI.GetNameDef]送一批武器，或者狠狠的揍他们的屁股。"
@@ -872,24 +877,23 @@
  SQI_imprisoned_emperor:0 "被软禁的皇帝"
  SQI_unify_the_country:0 "统一四方的军阀"
  SQI_unify_the_country_desc:0 "张天然希望完成从孙中山到溥仪的精神谱系建构。其中就包括把国家权力逐步移交给一贯道政府的手中这一步。消除这种对儒家价值的冒犯将会使我国更好的面对大劫的来临。"
-
- SQI_xin_ru_xue:0 "儒学教育"
- SQI_yi_guan_dao_de_cai_fu:0 "一贯道的财富"
- SQI_yi_guan_dao_de_cai_fu_desc:0 "道徒们忙忙碌碌一辈子的财富全部上交给了张天然，而现在，最后又全部给靳大帅做了嫁衣。"
- SQI_flee_to_zongchang2:0 "权力稳固"
- SQI_flee_to_zongchang2_desc:0 "山东经年累月的矛盾如疾风暴雨般倾泻而出，而靳云鹗抗住了压力，现在他的敌人们一个个被送上审判席，没有人再能在山东挑战靳云鹗督理的地位。"
  
- SQI_qing_hui_kong_meng:0 "接过屈映光遗产"
- SQI_qing_hui_kong_meng_desc:0 "山东有着浓厚的儒学色彩，在屈映光那家伙还在的时候，山东的本地豪强们比起我们就更喜欢这个文人，尤其是衍圣公这群人。不过现在他们已经没得选，他们如果还想要保持自己的家财，他们就得知道到底该和谁合作。毕竟，山东财政现在可还有一个巨大的窟窿。"
+ SQI_jin_yun_e_da_huo_quan_sheng:0 "骁威将军，风光万里"
+ SQI_jin_yun_e_da_huo_quan_sheng_desc:0 "张宗昌、张天然、屈映光...有太多的人盯着靳云鹗的位置了，他们都想要在这个乱世混出个名堂，但是这些等闲之辈又岂能击败大将军呢？山东只能由骁威将军靳云鹗说了算，没人在能动摇他的地位。"
+ SQI_Appointing_Lu_Zhongyi_Leader_Of_The_Yiguandao:0 "让路中节当天师"
+ SQI_Appointing_Lu_Zhongyi_Leader_Of_The_Yiguandao_desc:0 "靳云鹗在与一贯道的政治斗争中学到了一些教训，即山东的混乱让很多老百姓开始寻求宗教的安慰，为了切断一贯道与政治的联系，靳云鹗请满怀感激之情的路中节当天师，并让她远离政治，做好一个吉祥物该做的事情。"
+ SQI_Clearing_Out_Mount_Tai_Of_The_Yiguandao:0 "泰山一游"
+ SQI_Clearing_Out_Mount_Tai_Of_The_Yiguandao_desc:0 "张天然死后，泰山之上就打成了一锅粥，各路人马都在宣称自己是新天师，想要继承张天然的遗产。主要是那无数的黄金，当然了，既然我们选择支持路中节，那我们就有必要也申明我们才是这一笔财产的唯一继承人，而他们给也得给，不给也得给。"
+ SQI_Assassinating_Bureaucrats_Threatening_The_Opium_Trade:0 "控制毒品贸易"
+ SQI_Assassinating_Bureaucrats_Threatening_The_Opium_Trade_desc:0 "山东的经济糟糕透顶，但是山东的鸦片生意却又是成天到晚火爆得不行，凭借着德国人的港口还能向外输送。但是此前鸦片贸易完全是德国人和他们的走狗说了算，靳大帅完全插不进手，现在，山东权力已经稳固，他自然要从参一手。"
+ SQI_qing_hui_kong_meng:0 "接过屈映光的遗产"
+ SQI_qing_hui_kong_meng_desc:0 "山东有着浓厚的儒学色彩，在屈映光那家伙还在的时候，山东的本地豪强们比起我们就更喜欢这个文人，尤其是衍圣公那群人，他们跟在屈映光的屁股后面给他摇旗呐喊。不过现在他们已经没得选了，他们如果还想要保持自己的家财，他们就得知道到底该和谁合作，谁才是山东真正的主人。毕竟，山东财政现在可还有一个巨大的窟窿，他们的家财会是一个很好的弥补。"
  SQI_chong_jian_bao_jia_zhi:0 "重建保甲制"
- SQI_chong_jian_bao_jia_zhi_desc:0 "保甲制度是历史久远的一种社会组织方式和一种军事动员制度。现在山东的农村里遍地都是执迷不悟的一贯道匪徒，他们既然胆敢反抗我们那么就得为之付出代价。"
+ SQI_chong_jian_bao_jia_zhi_desc:0 "保甲制度是历史久远的一种社会组织方式和一种军事动员制度。大批的农民外逃弄得我们乡村秩序糟得一团，现在我们的农村里遍地都是那些执迷不悟的一贯道匪徒，他们既然胆敢反抗我们那么就得为之付出代价。"
  SQI_pei_bei_zhong_huo_li:0 "扩建白俄军"
  SQI_pei_bei_zhong_huo_li_desc:0 "众所周知张宗昌有一支由俄罗斯人组成的雇佣兵军队，而当年这支军队携带的作战重型铁甲列车让奉系属实是开了眼。但也因此列车炮被张作霖扣押，并没能让张宗昌拉回山东。后来张宗昌被赶跑了，现在尸体都不知道被野狗咬成什么样。而白俄雇佣军却仍旧留在山东为靳督理效忠，而他们的势力也得到了军阀们的认可。"
  SQI_zhi_feng_zhi_jian:0 "直奉之间"
  SQI_zhi_feng_zhi_jian_desc:0 "从1920年直皖战争，皖系战败之后，靳云鹗就投奔了吴佩孚。但是没有人能一直仰人鼻息，现在直奉交锋的大环境之下，孙传芳已死，南方陷入动乱，而靳云鹗也有着自己的野心。"
-
- SQI_ke_pu_du_wu:0 "科普读物"
- SQI_ke_pu_du_wu_desc:0 ""
 
  SQI_shu_li_tian_shi_xiang:0 "树立孔子像"
  SQI_shu_li_tian_shi_xiang_desc:0 "1922年张天然在泰山山顶建了一座神龛，而如今为了彰显自己对于孔孟的尊敬，他将仿照据传西方一个名叫巴西的国家修建的巨型雕像那般，在神龛之上修建一座巨型的孔子像。在山东的任意一个角落都将能接受到圣人的俯视。"
